# terraviz

./: .dev.vars.example  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MISSION.md  README.md  RELEASE_NOTES_v0.6.0.md  ROADMAP.md  STYLE_GUIDE.md  package-lock.json  package.json  typedoc.json  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: codeql-config.yml
cli/: commands.test.ts  commands.ts  import-snapshot.test.ts  import-snapshot.ts  init-node.test.ts  init-node.ts  report-transcode-failure.ts  terraviz.ts  transcode-from-dispatch.test.ts  transcode-from-dispatch.ts  tsconfig.json  zyra-publish-from-dispatch.test.ts  zyra-publish-from-dispatch.ts  zyra-spike-publish.test.ts  zyra-spike-publish.ts
docs/: AGENT_SDK_EVALUATION.md  ANALYTICS.md  ANALYTICS_CONTRIBUTING.md  ANALYTICS_IMPLEMENTATION_PLAN.md  ANALYTICS_QUERIES.md  ANALYTICS_QUESTIONS.md  ANALYTICS_STORAGE_AND_ADMIN_PLAN.md  BACKEND_MODULES.md  CATALOG_ASSETS_PIPELINE.md  CATALOG_BACKEND_DEVELOPMENT.md  CATALOG_BACKEND_PLAN.md  CATALOG_DATA_MODEL.md  CATALOG_FEDERATION_PROTOCOL.md  CATALOG_IMAGE_SEQUENCE_PLAN.md  CATALOG_PUBLISHING_TOOLS.md  CSS_ARCHITECTURE_PLAN.md  CURRENT_EVENTS_PLAN.md  DATASET_SOURCE_PRESETS_DRAFT.md  DESIGN_SYNC_PLAN.md  DESIGN_SYSTEM_PLAN.md  DOCENT_OPTIMIZATION_PLAN.md  DOCENT_UX_IMPROVEMENT_PLAN.md  FIGMA_COMPONENT_BRIEF.md  FIGMA_GETTING_STARTED.md  FIGMA_SYNC_PLAN.md  HELP_BUTTON_PLAN.md  INCREMENTAL_FRAME_UPLOAD_PLAN.md  INCREMENTAL_HLS_PLAN.md  LLM_INTEGRATION_OPPORTUNITIES.md  MAPLIBRE_MIGRATION_PLAN.md  MOBILE_APP_PLAN.md  MULTI_MONITOR_PLAN.md  ORBIT_CHARACTER_DESIGN.md  ORBIT_CHARACTER_INTEGRATION_PLAN.md  ORBIT_CHARACTER_VINYL_REDESIGN.md  ORBIT_VOICE_PLAN.md  ORBIT_WAKEWORD.md  PRIVACY.md  PRIVACY_ANALYSIS.md  RELEASE_MOBILE.md  (+14 more)
functions/: tsconfig.json
grafana/: README.md
locales/: _explanations.json  en.json  es.json  kab.json
migrations/: 0001_create_feedback_table.sql  0003_add_feedback_quality_columns.sql  0004_add_tags_and_upsert_index.sql  0006_create_general_feedback_table.sql  0007_general_feedback_standalone.sql  catalog-schema.sql
poster/: index.html
public/: _headers  _redirects  design-preview.html  privacy.html  site.webmanifest  sw.js
scripts/: build-privacy-page.test.ts  build-privacy-page.ts  build-protocol-schemas.ts  check-design-roundtrip.ts  check-doc-coverage.test.ts  check-doc-coverage.ts  clean-d1-state.ts  dump-catalog-schema.ts  enrich-probe.ts  gen-node-key.test.ts  gen-node-key.ts  generate-icons.mjs  generate-locales.ts  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/plugins/apple-intelligence/: Cargo.toml  build.rs
src-tauri/plugins/apple-intelligence/ios/: Package.swift
src-tauri/plugins/apple-intelligence/ios/Sources/: AppleIntelligencePlugin.swift
src-tauri/plugins/apple-intelligence/src/: lib.rs
src-tauri/src/: download_commands.rs  download_manager.rs  keychain.rs  lib.rs  main.rs
(+684 files in other folders)
