[package]
name = "interactive-sphere"
version = "0.1.0"
description = "Interactive Sphere — NASA Science On a Sphere desktop app"
authors = ["Zyra Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
