[package]
name = "interactive-sphere"
version = "0.1.0"
description = "Interactive Sphere — NASA Science On a Sphere desktop app"
authors = ["Zyra Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
log = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
