[package]
name = "tauri-plugin-apple-intelligence"
version = "0.1.0"
description = "Tauri plugin bridging Apple's Foundation Models framework for on-device LLM inference"
authors = ["Zyra Project"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
